--- a/app/src/main/res/layout/fragment_tab_two.xml
+++ b/app/src/main/res/layout/fragment_tab_two.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/green"
-    tools:context=".TabTwoFragment" >
+    tools:context=".examples.TabTwoFragment" >
 
     <TextView
         android:id="@+id/textView2"
