--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,9 @@
     <color name="purple">#673AB7</color>
     <color name="blue">#3F51B5</color>
     <color name="green">#4CAF50</color>
+
+    <color name="main">#FF914D</color>
+    <color name="secundary">#0B8138</color>
+
+
 </resources>
